--- a/gastronomia.html
+++ b/gastronomia.html
@@ -27,7 +27,7 @@
 		<a title="Rutas" accesskey="r" href="rutas.html" tabindex="5">Rutas</a>
 		<a title="Reservas" accesskey="s" href="php/reservas.php" tabindex="6">Reservas</a>
         <a title="Login" accesskey="c" href="php/login.php" tabindex="7">Iniciar sesión</a>
-        <a title="Registrarse" accesskey="i" href="php/registro.php" tabindex="8">Registro</a>
+        <a title="Registrarse" accesskey="t" href="php/registro.php" tabindex="8">Registro</a>
 	</nav>
 	
 	<main>
