--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<a title="Rutas" accesskey="r" href="rutas.html" tabindex="5">Rutas</a>
 		<a title="Reservas" accesskey="s" href="php/reservas.php" tabindex="6">Reservas</a>
         <a title="Login" accesskey="c" href="php/login.php" tabindex="7">Iniciar sesión</a>
-        <a title="Registrarse" accesskey="i" href="php/registro.php" tabindex="8">Registro</a>
+        <a title="Registrarse" accesskey="t" href="php/registro.php" tabindex="8">Registro</a>
 	</nav>
 	<main>
 		<section>
@@ -42,6 +42,7 @@
 		
 	<section>
 		<h2>Noticias mundiales</h2>
+		<p>Estas son las noticias para el día de hoy:</p>
 		<script src="js/Noticias.js"></script>
 		</section>
 		<section>
