--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 	</main>
 	<footer>
-	 <p>Autor : <em>Pablo Rodríguez Rodríguez</em></p>
+	 <p>Autor : <em>Pablo Rodríguez Rodríguezz</em></p>
 	</footer>
 </body>
 </html>
