--- a/gastronomia.html
+++ b/gastronomia.html
@@ -80,8 +80,8 @@
 			</p>
 			<h4>Vídeo del restaurante El Puente</h4>
 			<video src="multimedia/restaurante_el_puente.mp4" controls></video>
-			<!--<h4>Fotografía de plato de El Hogar</h4>
-			<img src="multimedia/plato_el_hogar.png" alt="Plato cominado del restaurante El Hogar" />-->
+			<h4>Fotografía de plato de El Hogar</h4>
+			<img src="multimedia/plato_el_hogar.png" alt="Plato cominado del restaurante El Hogar" />
 		</section>
 		<section>
 		<h3>Los platos más típicos de Riosa, agrupados por tipo y de mejor a peor son:</h3>
