--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
 	<section>
 		<h2>Noticias mundiales</h2>
 		<p>Estas son las noticias para el día de hoy:</p>
+		<p></p>
+		<p></p>
+		<p></p>
+		<p></p>
+		<p></p>
 		<script src="js/Noticias.js"></script>
 		</section>
 		<section>
@@ -56,7 +61,7 @@
 
 	</main>
 	<footer>
-	 <p>Autor : <em>Pablo Rodríguez Rodríguezz</em></p>
+	 <p>Autor : <em>Pablo Rodríguez Rodríguez</em></p>
 	</footer>
 </body>
 </html>
