--- a/juego.html
+++ b/juego.html
@@ -29,6 +29,10 @@
 	</nav>
 	<main>
 		<article>
+		<p>Las reglas del juego son sencillas</p>
+		<p>Se trata de 10 preguntas tipo test</p>
+		<p>Su respuesta la podrás hallar por la página</p>
+		<p>Cuando realices todas las preguntas te saldrá la puntuación</p>
 		<h2>Juego</h2>
 		<p>Pregunta</p>
 		
