--- a/gastronomia.html
+++ b/gastronomia.html
@@ -8,10 +8,10 @@
 	<meta name ="description" content ="Documento del sitio web sobre la gastronomia de Riosa" />
 	<meta name ="keywords" content= "Riosa, feria, restaurante, pote" />
 	<meta name ="viewport" content ="width=device-width, initial-scale=1.0" />
-	<title>Gatronomía Riosa</title>
-	<link rel="stylesheet" type="text/css" href="estilo/estilo.css" />
-	<link rel="stylesheet" type="text/css" href="estilo/layout.css" />
-	<link rel="stylesheet" type="text/css" href="estilo/tabla.css" />
+	<title>Gastronomía Riosa</title>
+	<link rel="stylesheet" type="text/css" href="estilo/estilo.css"/>
+	<link rel="stylesheet" type="text/css" href="estilo/layout.css"/>
+	<link rel="stylesheet" type="text/css" href="estilo/tabla.css"/>
 </head>
 	
 <body>
