--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 	<link rel="stylesheet" type="text/css" href="estilo/estilo.css" />
 	<link rel="stylesheet" type="text/css" href="estilo/layout.css" />
 	<script src="js/Carrusel.js"></script>
-	<script src="js/ConversionSVG.js"></script>	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 	
@@ -35,14 +34,13 @@
 		<section>
 		<h2>Carrusel sitios turísticos</h2>
 				<img src ="multimedia/angliru.png" alt="Icono del Framework"/>
-			<input type="button" value="Anterior" onclick="conversion.cargar()" />
+			<input type="button" value="Anterior" onclick="carrusel.getPrevious()" />
 			<input type="button" value="Siguiente" onclick="carrusel.getNext()" />
 		</section>
 		
 	<section>
 		<h2>Noticias mundiales</h2>
 		<p>Estas son las noticias para el día de hoy:</p>
-		<p></p>
 		<p></p>
 		<p></p>
 		<p></p>
