--- a/gastronomia.html
+++ b/gastronomia.html
@@ -79,6 +79,7 @@
 				la calidad de sus productos. 
 			</p>
 			<h4>Vídeo del restaurante El Puente</h4>
+			<p>Video subido a Facebook</p>
 			<video src="multimedia/restaurante_el_puente.mp4" controls></video>
 			<h4>Fotografía de plato de El Hogar</h4>
 			<img src="multimedia/plato_el_hogar.png" alt="Plato cominado del restaurante El Hogar" />
