--- a/juego.html
+++ b/juego.html
@@ -36,24 +36,24 @@
 		<h2>Juego</h2>
 		<p>Pregunta</p>
 		
-			<label>
-			  <input type="radio" name=respuesta value="a">
+			<label for='a'>
+			  <input type="radio" name=respuesta id="a" value="a">
 			  <span></span>
 			</label>
-			<label>
-			  <input type="radio" name=respuesta value="b">
+			<label for='b'>
+			  <input type="radio" name=respuesta id="b" value="b">
 			  <span></span>
 			</label>
-			<label>
-			  <input type="radio" name=respuesta value="c">
+			<label for='c'>
+			  <input type="radio" name=respuesta id="c" value="c">
 			  <span></span>
 			</label>
-			<label>
-			  <input type="radio" name=respuesta value="d">
+			<label for='d'>
+			  <input type="radio" name=respuesta id="d" value="d">
 			  <span></span>
 			</label>
-			<label>
-			  <input type="radio" name=respuesta  value="e">
+			<label for='e'>
+			  <input type="radio" name=respuesta id="e" value="e">
 			  <span></span>
 			</label>
 			
